# diffilqrax-m1arm

./: .gitignore  .pylintrc  .readthedocs.yaml  CITATION.cff  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_doc.txt  setup.py
.github/workflows/: documentation.yml  python-package.yml  python-publish.yml
diffilqrax/: diff_ilqr.py  diff_lqr.py  exact.py  ilqr.py  lqr.py  parallel_dilqr.py  parallel_dlqr.py  parallel_ilqr.py  pilqr.py  plqr.py  typs.py  utils.py
doc/source/: conf.py  index.rst
doc/source/about/: lqr_theory.rst
doc/source/api/: modules.rst
doc/source/api/modules/: diffilqrax_dilqr.rst  diffilqrax_dlqr.rst  diffilqrax_ilqr.rst  diffilqrax_lqr.rst  diffilqrax_pilqr.rst  diffilqrax_plqr.rst  diffilqrax_typs.rst
doc/source/examples/: double_pendulum.ipynb  gradients_through_ilqr.ipynb  ilqr_vs_backpropagation.ipynb  index.rst  lqr_integrator.ipynb  lqr_tracking_integrator.ipynb  simple_pendulum.ipynb  simple_pendulum_with_slider.ipynb
doc/source/userguide/: design_principles.rst  getting_started.rst  tutorials.rst
examples/: example.py  pendulum.py
notebook/: pendulum_inference.ipynb  test_s5.ipynb
src/: ._wordcount_selection.tex  __init__.py  diff_ilqr.py  diff_lqr.py  exact.py  generate_data.py  ilqr.py  linesearch.py  lqr.py  utils.py
test/: test_lqr.py
tests/: fixtures.py  lqr_runtime.py  test_dilqr.py  test_dlqr.py  test_ilqr.py  test_lqr.py  test_parallel_ilqr.py  test_pdilqr.py  test_pdlqr.py  test_pilqr.py  test_plqr.py  test_s5.py
tests/fixtures/: ilqr_exact_solution.npz
