[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "diffilqrax"
version = "0.1.0"
authors = [
  { name="Thomas Soares Mullen", email="thomasmullen96@gmail.com" },
  { name="Marine Schimel", email="marine.schimel@hotmail.fr" },
]
description = "Differentiable iLQR algorithm for dynamical systems"
readme = "README.rst"
requires-python = ">=3.9"
license = {file = "LICENSE"}

classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  
  # Pick your license as you wish
  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/ThomasMullen/diffilqrax"
"Bug Tracker" = "https://github.com/ThomasMullen/diffilqrax/issues"

[tool.setuptools_scm]

